about page, feature complete

--- a/game/WDSprotosite/about.html
+++ b/game/WDSprotosite/about.html
@@ -19,9 +19,32 @@
             <main>
                 <h1>HEADLINE</h1>
                 <section class="about">
-                <img src="" alt="avatar">
-                <div>
-                    <p>About text</p>
+                <img src="images/avatar_placeholder.png" alt="avatar" class="avatar">
+                <div class="aboutText">
+                    <p>
+                        Cat ipsum dolor sit amet, magnam suscipit suscipit yet laboriosam. Id.
+                        Esse nihil and accusantium nostrum. Vel sed veritatis, but ipsam accusantium consequuntur.
+                        Ullam ex yet minima lorem or dicta. Si voluptas. Sint nulla veniam for quaerat or modi eu. Quaerat exercitationem.
+                        Exercitation.
+                    </p>
+                    <p>
+                            Cat ipsum dolor sit amet, magnam suscipit suscipit yet laboriosam. Id.
+                            Esse nihil and accusantium nostrum. Vel sed veritatis, but ipsam accusantium consequuntur.
+                            Ullam ex yet minima lorem or dicta. Si voluptas. Sint nulla veniam for quaerat or modi eu. Quaerat exercitationem.
+                            Exercitation.
+                        </p>
+                        <p>
+                                Cat ipsum dolor sit amet, magnam suscipit suscipit yet laboriosam. Id.
+                                Esse nihil and accusantium nostrum. Vel sed veritatis, but ipsam accusantium consequuntur.
+                                Ullam ex yet minima lorem or dicta. Si voluptas. Sint nulla veniam for quaerat or modi eu. Quaerat exercitationem.
+                                Exercitation.
+                            </p>
+                            <p>
+                                    Cat ipsum dolor sit amet, magnam suscipit suscipit yet laboriosam. Id.
+                                    Esse nihil and accusantium nostrum. Vel sed veritatis, but ipsam accusantium consequuntur.
+                                    Ullam ex yet minima lorem or dicta. Si voluptas. Sint nulla veniam for quaerat or modi eu. Quaerat exercitationem.
+                                    Exercitation.
+                                </p>
                 </div>
             </section>
             </main>
