--- a/game/WDSprotosite/index.html
+++ b/game/WDSprotosite/index.html
@@ -27,7 +27,7 @@
         <section class="images">
             <h2>Image title</h2>
             <img src="" alt="gallery image" class="galleryImage">
-            <p>image description</p>
+            <p>image description - Cat ipsum dolor sit amet, magnam suscipit suscipit yet laboriosam. Id.</p>
         </section>
         </div>
        
