--- a/game/WDSprotosite/index.html
+++ b/game/WDSprotosite/index.html
@@ -18,17 +18,20 @@
     </header>
     <main>
         <h1>HEADLINE</h1>
+
         <div class="content">
              <aside class="asideNav">
           <button class="galleryButton1">Image 1</button>
           <button class="galleryButton2">Image 2</button>
           <button class="galleryButton3">Image 3</button>
         </aside>
+
         <section class="images">
-            <h2>Image title</h2>
+            <h2 class="imageTitle">Image title</h2>
             <img src="" alt="gallery image" class="galleryImage">
-            <p>image description - Cat ipsum dolor sit amet, magnam suscipit suscipit yet laboriosam. Id.</p>
+            <p class="imageDescription">image description - Cat ipsum dolor sit amet, magnam suscipit suscipit yet laboriosam. Id.</p>
         </section>
+
         </div>
        
     </main>
